Update usage of setVisibleContentsRect.

Nix WebView::setScale should be changed to update the scale without
the commitViewportChanges.

Build fix after https://bugs.webkit.org/show_bug.cgi?id=105978